# Creative-Storytelling

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills.md
.claude/: settings.json
.github/workflows/: pages.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: base_agent.py  character_agent.py  coherence_agent.py  grammar_agent.py  scene_expand_agent.py  worker.py
backend/app/models/: __init__.py  agent_task.py  character.py  rag_chunk.py  scene.py  story.py
backend/app/routers/: agent_tasks.py  characters.py  export.py  ideas.py  scenes.py  stories.py  websocket.py
backend/app/schemas/: __init__.py  agent_task.py  character.py  scene.py  story.py
backend/app/services/: llm_service.py  rag_service.py  story_manager.py
backend/app/tools/: story_tools.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_agents_base.py  test_agents_grammar.py  test_idea_generation.py  test_routers_agent_tasks.py  test_routers_characters.py  test_routers_scenes.py  test_routers_stories.py  test_services_llm.py  test_services_rag_service.py  test_services_story_manager.py  test_ws_manager.py
docs/: index.html
frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/editor/: AISuggestionPanel.tsx  EditorLayout.tsx  RichTextEditor.css  RichTextEditor.tsx  (+1 more)
frontend/src/hooks/: useStoryWebSocket.ts
frontend/src/store/: storyStore.ts
frontend/src/types/: index.ts
(+2 files in other folders)
